[TASK] RT-2284: To and From buttons alignment fix

--- a/src/less/bootstrap/input-groups.less
+++ b/src/less/bootstrap/input-groups.less
@@ -45,6 +45,25 @@
   &:not(:first-child):not(:last-child) {
     border-radius: 0;
   }
+
+
+}
+.input-group {
+  &.inline-inputs-group {
+    width: 100%;
+    .input-group-addon {
+      display: inline-block;
+      width: 30%;
+      padding: 0;
+      height: 42px;
+      line-height: 40px;
+    }
+    .input-wrapper {
+      width: 70%;
+      display: inline-block;
+    }
+  }
+
 }
 // Addon and addon wrapper for buttons
 .input-group-addon,
